Add placesOfBirth route, close #13
